added order flow report and updated readme
